# ComputerVisionStreams

./: .gitignore  LICENSE  README.md
CreateRTSPStream/: Readme.md
DeepStream 7.0/: Dockerfile  Readme.md
DeepStream 7.0/cpp_pipeline_old/: CMakeLists.txt  deepstream_pipeline.cpp
DeepStream_7_KafkaMetadata/: Readme.md  docker-compose.yaml
DeepStream_7_KafkaMetadata/cpp_pipeline/: CMakeLists.txt  cfg_kafka.txt  cfg_nvmsgbroker.txt  my_deepstream_app.cpp
DeepStream_7_KafkaMetadata/cpp_pipeline_custom_payload/: CMakeLists.txt  Readme.md  cfg_msgconv.txt  custom_payload.cpp
DeepStream_7_KafkaMetadata/cpp_pipeline_custom_payload/nvmsgbroker_custom/nvmsgconv/: Makefile  nvmsgconv.cpp
DeepStream_7_KafkaMetadata/cpp_pipeline_custom_payload/nvmsgbroker_custom/nvmsgconv/deepstream_schema/: deepstream_schema.h  dsmeta_payload.cpp  eventmsg_payload_peoplenet.cpp
DeepStream_7_KafkaMetadata/kafka/: producer_test.py
DeepStream_Profiling_NsightSystems/: .gitignore  Dockerfile  readme.md
DeepStream_Profiling_NsightSystems/cpp_pipeline/: my_deepstream_app.cpp
DeepStream_Profiling_NsightSystems/cpp_pipeline_nvtx/: CMakeLists.txt  my_deepstream_app.cpp
DeepStream_test5/: .gitignore  README.md
DeepStream_test5/multiurisrcbin/: CMakeLists.txt  multiutisrc_sample.cpp
DeepStream_test5/ota_model_update/: CMakeLists.txt  ota_model_update_sample.cpp  readme.md
Deepstream_vs_Youtube/: Dockerfile  Readme.md  commands.sh
DumpTrackingMetadata/: .gitignore  Dockerfile  Readme.md  parse_trackeval_results.py
DumpTrackingMetadata/cpp_pipeline_old/: CMakeLists.txt  deepstream_pipeline.cpp
DumpTrackingMetadata/data/: SDG_1min_all_2.txt  config1.json  config2.json  kittiTrack2mot.sh
DumpTrackingMetadata/data/SDG_1min_videos/Retail_Synthetic_Cam01/: seqinfo.ini
DumpTrackingMetadata/data/SDG_1min_videos/Retail_Synthetic_Cam02/: seqinfo.ini
Introduction_Gstreamer/: Dockerfile  Readme.md  install_opencv_with_gstreamer.sh  simple_pipelines.sh
Jetson_AI_NVR/: readme.md
Opencv+Gstreamer/: Dockerfile  Opnecv+Gstreamer.ipynb  Readme.md
TracingLatency/: Dockerfile  Readme.md
TracingLatency/deepstream_pipeline/: CMakeLists.txt  ProcessTraceLog.ipynb  deepstream_pipeline.cpp  parse_latency_trace.py
TritonInferenceServer/: .gitignore  Readme.md  docker-compose.yaml
TritonInferenceServer/prometheus/: prometheus.yml
VLM_VideoSummarization/: Dockerfile  config.py  main.py  readme.md
VLM_VideoSummarization/config/: main_config.json
ZeroShotDetectionJetson/: readme.md
(+2 files in other folders)
